# swarms

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: check-code-style.sh  debug.sh  run.sh  tests.sh
src/: CMakeLists.txt  defines.h
src/app/: CMakeLists.txt  app.cpp
src/app/include/: app.hh
src/client/: CMakeLists.txt  main.cc
src/client/lib/: CMakeLists.txt  app.cpp  app.cppm  app_base.cppm  app_sdl2.cpp  app_sdl2.cppm  app_sdl2_opengl.cpp  app_sdl2_vulkan.cpp  common.cppm  input.cppm  opengl.cpp  opengl.cppm  opengl_renderer.cpp  opengl_renderer.cppm  render.cppm  sdl2.cpp  sdl2.cppm  vulkan.cpp  vulkan.cppm  window_system.cppm
src/client/lib/shader_src/: default_fs.glsl
src/core/: CMakeLists.txt  Uuid.cc  Uuid.hh
src/core/agents/: Animat.cc  Animat.hh  CMakeLists.txt  Frustum.cc  Frustum.hh  IAgent.hh
src/core/components/: AbstractComponent.cc  AbstractComponent.hh  AnimatComponent.cc  AnimatComponent.hh  CMakeLists.txt  ComponentType.cc  ComponentType.hh  FrustumComponent.cc  FrustumComponent.hh  IComponent.hh  IComponent.hxx  TransformComponent.cc  TransformComponent.hh  VelocityComponent.cc  VelocityComponent.hh
src/core/entities/: CMakeLists.txt  EntityRegistry.cc  EntityRegistry.hh  EntityRegistry.hxx  IEntityRegistry.hh
src/core/environment/: AbstractEnvironment.cc  AbstractEnvironment.hh  CMakeLists.txt  Environment.cc  Environment.hh  IEnvironment.hh  IEnvironment.hxx  IEnvironmentInitializer.hh
src/core/influences/: IInfluence.hh
src/core/perceptions/: IPerception.hh
src/core/physics/: CMakeLists.txt  IBoundingBox.hh
src/core/physics/bbox/: AxisAlignedBoundingBox.cc  AxisAlignedBoundingBox.hh  CMakeLists.txt  CircleBox.cc  CircleBox.hh
src/core/random/: CMakeLists.txt  IRandomNumberGenerator.hh  RNG.cc  RNG.hh
src/core/runtime/: CMakeLists.txt  EnvironmentProcessor.cc  EnvironmentProcessor.hh
src/core/serialization/: CMakeLists.txt  StringUtils.cc  StringUtils.hh  VectorUtils.cc  VectorUtils.hh
src/core/systems/: CMakeLists.txt  ISystem.hh  MotionSystem.cc  MotionSystem.hh
src/log/: CMakeLists.txt  ILogger.hh  Locator.cc  Locator.hh  NullLogger.cc  NullLogger.hh  PrefixedLogger.cc  PrefixedLogger.hh  Severity.cc  Severity.hh  StdLogger.cc  StdLogger.hh  StreamFormatter.cc  StreamFormatter.hh
src/render/: CMakeLists.txt  renderer.cpp
src/render/include/: render.hh  stb_image.h
src/render/opengl/: CMakeLists.txt  opengl_renderer.cpp
src/render/opengl/include/: opengl_renderer.hh
src/render/shader_src/: default_colored_transform.slang  default_fs.glsl  default_shader.slang  default_shader_stage2.slang  default_shader_stage3.slang  default_shader_stage4.slang  default_textured.slang  default_vs.glsl
src/render/vulkan/: CMakeLists.txt  vulkan.cpp  vulkan.hh  vulkan_storage.cpp
src/render/vulkan/include/: vulkan_renderer.hh
src/runtime/: CMakeLists.txt  CoreException.cc  CoreException.hh  CoreObject.cc  CoreObject.hh  SafetyNet.cc  SafetyNet.hh
src/server/: CMakeLists.txt  main.cc
src/server/lib/: CMakeLists.txt  Server.cc  Server.hh
src/simulation/: CMakeLists.txt  RandomInitializer.cc  RandomInitializer.hh
src/time/: CMakeLists.txt  Duration.cc  Duration.hh  ITimeManager.hh  Tick.hh  TickData.hh  TickDuration.hh  TimeManager.cc  TimeManager.hh  TimeStamp.hh  TimeStamp.hxx  TimeStep.cc  TimeStep.hh  Unit.cc  Unit.hh
src/window/: CMakeLists.txt
src/window/include/: common.hh  defines.h  input.hh  window_system.hh
src/window/sdl2/: CMakeLists.txt  app_sdl2_vulkan.cpp  sdl2.cpp  sdl2_input.cpp
src/window/sdl2/include/: sdl2.hh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cc
tests/unit/: CMakeLists.txt
tests/unit/time/: CMakeLists.txt  DurationTest.cc  TimeManagerTest.cc  TimeStepTest.cc  UnitTest.cc
