
add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/client
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/core
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/log
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/runtime
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/server
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/time
	)

