
add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/client
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/core
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/server
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/time
	)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/window
)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/render
)

add_subdirectory(
	${CMAKE_CURRENT_SOURCE_DIR}/app
)


